<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@id/emailTextInputLayout"
        app:layout_constraintStart_toStartOf="@id/emailTextInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@id/sign_up">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_button"
            android:hint="@string/enter_your_email"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/phoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@id/phoneTextLayout"
        app:layout_constraintStart_toStartOf="@id/phoneTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_button"
            android:hint="@string/enter_your_phone_number"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@id/passwordTextLayout"
        app:layout_constraintStart_toStartOf="@id/passwordTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_button"
            android:hint="@string/enter_your_password"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/ConfirmPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/confirm_password"
        app:layout_constraintBottom_toTopOf="@id/confirmPasswordTextLayout"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_button"
            android:hint="@string/confirm_your_password"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_400" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/agree_with_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_agree_with_terms_conditions_and_privacy_policy"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/confirmPasswordTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextLayout" />

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bg_purple_button"
        android:gravity="center"
        android:paddingVertical="24dp"
        android:text="SIGN UP"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/already_have_an_account_sign_in_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>