<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/project_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bg_create_project">

        <TextView
            android:id="@+id/project_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_list"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:shadowColor="@color/shadow_200"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="20"
            />
        <TextView
            android:id="@+id/quote_project_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_project_your_vision"
            android:textColor="@color/purple_200"
            android:textSize="22sp"
            android:layout_alignStart="@+id/project_list"
            android:layout_below="@+id/project_list"
            />
        <ImageView
            android:id="@+id/ic_note_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_note_book"
            android:contentDescription="@string/notebook_icon"
            android:layout_toEndOf="@id/quote_project_list"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/project_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/project_list_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_project"
        />
    <TextView
        android:id="@+id/btn_create_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_project"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@drawable/bg_purple_button"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:layout_marginBottom="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>