<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="7dp"
    android:layout_marginHorizontal="10dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
        <TextView
            android:id="@+id/project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:width="210dp"
            android:height="45dp"
            />
        <TextView
            android:id="@+id/project_description_lbl"
            android:text="@string/project_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/ic_project_description"
            app:layout_constraintTop_toBottomOf="@+id/project_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:drawablePadding="7dp"
            />
        <TextView
            android:id="@+id/project_start_date_lbl"
            android:text="@string/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/ic_start_date"
            app:layout_constraintTop_toBottomOf="@+id/project_description_lbl"
            app:layout_constraintLeft_toLeftOf="parent"
            android:drawablePadding="7dp"
            />
        <TextView
            android:id="@+id/project_task_lbl"
            android:text="@string/tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableLeftCompat="@drawable/ic_tasks_completed"
            app:layout_constraintTop_toBottomOf="@+id/project_start_date_lbl"
            app:layout_constraintLeft_toLeftOf="parent"
            android:drawablePadding="7dp"
            />
        <TextView
            android:id="@+id/project_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/project_description_lbl"
            app:layout_constraintTop_toTopOf="@+id/project_description_lbl"
            android:layout_marginStart="40dp"
            />
        <TextView
            android:id="@+id/project_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/project_start_date_lbl"
            app:layout_constraintLeft_toRightOf="@+id/project_description_lbl"
            android:layout_marginStart="40dp"
            />
        <TextView
            android:id="@+id/project_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/project_description_lbl"
            app:layout_constraintTop_toTopOf="@id/project_task_lbl"
            android:layout_marginStart="40dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >
        </androidx.recyclerview.widget.RecyclerView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_project"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>